座標の生成を変えた

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,6 @@ commands:
     grave:
         description: "墓を開く"
         usage: "/grave"
+    grave_xyz:
+        description: "墓の座標を取得する"
+        usage: "/grave_xyz"
