--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<version>1.21.5-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
